2010-07-13  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] Trivial build fix.

        Provide a stub for mimeTypeFromExtension() that uses notImplemented().

        * UIProcess/Plugins/qt/PluginInfoStoreQt.cpp:
        (WebKit::PluginInfoStore::mimeTypeFromExtension):

2010-07-13  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Tweaks needed to compile WebKit2 with Qt
        https://bugs.webkit.org/show_bug.cgi?id=41604

        * UIProcess/Launcher/qt/ProcessLauncherQt.cpp:
        (WebKit::ProcessLauncherHelper::launch): Adjust to PassOwnPtr API changes.
        * WebProcess/InjectedBundle/API/c/WKBundlePage.h: Don't include JavaScriptCore.h,
        as it unconditionally includes JSStringRefCF. Instead include JavaScript.h.

2010-07-12  Steve Falkenburg  <sfalken@apple.com>

        Windows build fix.
        Don't build MiniBrowser except for Debug_Internal.

        * WebKit2.sln:

2010-07-12  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Maciej Stachowiak.

        Make WebKit2 be built by build-webkit (so it will be built by build.webkit.org bots)
        https://bugs.webkit.org/show_bug.cgi?id=40922
        
        Add additional dependent projects. Necessary since our WebKit build on
        Windows is packaged into a DLL with WebKit2.

        * WebKit2.sln:

2010-07-12  Mark Rowe  <mrowe@apple.com>

        Rubber-stamped by Maciej Stachowiak.

        Fix WebKit2 to use the same compiler-selection logic as the other projects.

        * WebKit2.xcodeproj/project.pbxproj: Don't hard-code WebKit2 to build with GCC 4.2.

2010-07-12  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Anders Carlsson.

        WKView should override setFrameSize: instead of setFrame:
        https://bugs.webkit.org/show_bug.cgi?id=42127

        * UIProcess/API/mac/WKView.mm:
        (-[WKView setFrameSize:]): Override this method instead of setFrame:,